[package]
name = "parseval"
version = "0.1.0"
authors = ["Michael Angerman <stormasm@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
bigdecimal = { version = "0.2.0", features = ["serde"] }
futures = { version = "0.3.12", features = ["compat", "io-compat"] }
futures-util = "0.3.12"
indexmap = { version = "1.6.1", features = ["serde-1"] }
itertools = "0.10.0"
num-bigint = { version = "0.3.1", features = ["serde"] }
num-traits = "0.2.14"
parking_lot = "0.11.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"

### nushell crates

nu-data = {git = "https://github.com/nushell/nushell.git", branch = "main"}
nu-engine = {git = "https://github.com/nushell/nushell.git", branch = "main"}
nu-errors = {git = "https://github.com/nushell/nushell.git", branch = "main"}
nu-parser = {git = "https://github.com/nushell/nushell.git", branch = "main"}
nu-protocol = {git = "https://github.com/nushell/nushell.git", branch = "main"}
nu-source = {git = "https://github.com/nushell/nushell.git", branch = "main"}
nu-stream = {git = "https://github.com/nushell/nushell.git", branch = "main"}
nu-value-ext = {git = "https://github.com/nushell/nushell.git", branch = "main"}
